[package]
name = "juejing_actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { version = "1.9.0" }
tokio = { version =  "1", features = ["full"]  }
hyper = { version = "0.14.11", features = ["client", "runtime", "http1", "http2"] }
hyper-tls ="0.5.0"
serde_json = "1.0.73"
serde = { version = "1.0.132", features = ["derive"] }